[tool.poetry]
name = "publiclands"
version = "0.1.0"
description = ""
authors = ["Martin Galese <martin@galese.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.2"
geopandas = "^0.14.3"
simplekml = "^1.3.6"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipython = "^8.22.2"
ipywidgets = "^8.1.2"
black = "^24.3.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
